[package]
name = "tonic-consistent-hashing-lb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[[bin]]
#name = "helloworld-server"
#path = "src/server/lib.rs"

#[[bin]]
#name = "helloworld-client"
#path = "src/client/lib.rs"

[dependencies]
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
hostname = "0.3.1"
fasthash = "0.4.0"
anyhow = "1.0.75"
#kube = { version = "0.86.0", features = ["runtime", "derive"] }
#k8s-openapi = { version = "0.20.0", features = ["latest"] }
#bytes = "1.0"
#http = "0.2"
tower = {version = "0.4.7", features = ["balance", "buffer", "discover", "limit", "load", "make", "timeout", "util"] }
#hyper = {version = "0.14.26", features = ["full"]}
#tower-service = "0.3"
#pin-project = "1.0.11"
#tracing = "0.1"
#tokio-stream = "0.1"
futures-util = "0.3.29"
rand = "0.8.5"
#
[build-dependencies]
tonic-build = "0.10"
